--- a/TeamProject/TeamProject.csproj
+++ b/TeamProject/TeamProject.csproj
@@ -160,7 +160,7 @@
     <Compile Include="Controllers\BookingsController.cs" />
     <Compile Include="Controllers\BranchesController.cs" />
     <Compile Include="Controllers\CourtsController.cs" />
-    <Compile Include="Controllers\FacilitiesController.cs" />
+    <Compile Include="Areas\Admin\Controllers\FacilitiesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\ReviewsController.cs" />
@@ -305,11 +305,11 @@
     <Content Include="Views\Courts\Details.cshtml" />
     <Content Include="Views\Courts\Edit.cshtml" />
     <Content Include="Views\Courts\Index.cshtml" />
-    <Content Include="Views\Facilities\Create.cshtml" />
-    <Content Include="Views\Facilities\Delete.cshtml" />
-    <Content Include="Views\Facilities\Details.cshtml" />
-    <Content Include="Views\Facilities\Edit.cshtml" />
-    <Content Include="Views\Facilities\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Facilities\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\Facilities\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\Facilities\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\Facilities\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Facilities\Index.cshtml" />
     <Content Include="Views\Reviews\Create.cshtml" />
     <Content Include="Views\Reviews\Delete.cshtml" />
     <Content Include="Views\Reviews\Details.cshtml" />
