--- a/TeamProject/TeamProject.csproj
+++ b/TeamProject/TeamProject.csproj
@@ -225,9 +225,12 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\BranchesImages\na_image.jpg" />
     <Content Include="Images\CarrouselImages\880x495_cmsv2_a9dcd7ed-1ff5-5d7c-8de0-63b847a68c91-3156825.jpg" />
     <Content Include="Images\CarrouselImages\FIFA-2018-World-Cup-Featured-1366x768.jpg" />
     <Content Include="Images\CarrouselImages\Footbal_Men_Ball_Glove_515345_1366x768.jpg" />
+    <Content Include="Images\CourtsImages\court1.jpg" />
+    <Content Include="Images\CourtsImages\na_image.jpg" />
     <Content Include="Images\LoginImage\business-team-meeting.jpg" />
     <Content Include="Models\DbSchema.sql" />
     <Content Include="Scripts\bootstrap.bundle.js" />
@@ -353,8 +356,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Models\" />
-    <Folder Include="Images\BranchesImages\" />
-    <Folder Include="Images\CourtsImages\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
