--- a/TeamProject/TeamProject.csproj
+++ b/TeamProject/TeamProject.csproj
@@ -231,8 +231,15 @@
     <Content Include="Images\CarrouselImages\880x495_cmsv2_a9dcd7ed-1ff5-5d7c-8de0-63b847a68c91-3156825.jpg" />
     <Content Include="Images\CarrouselImages\FIFA-2018-World-Cup-Featured-1366x768.jpg" />
     <Content Include="Images\CarrouselImages\Footbal_Men_Ball_Glove_515345_1366x768.jpg" />
+    <Content Include="Images\CourtsImages\AgParaskeuiCourt.jpg" />
+    <Content Include="Images\CourtsImages\AthensCourt3.JPG" />
     <Content Include="Images\CourtsImages\court1.jpg" />
     <Content Include="Images\CourtsImages\na_image.jpg" />
+    <Content Include="Images\CourtsImages\Rouf1.jpg" />
+    <Content Include="Images\CourtsImages\Rouf2.jpg" />
+    <Content Include="Images\CourtsImages\Rouf3.jpg" />
+    <Content Include="Images\CourtsImages\VurwnasCourt.jpg" />
+    <Content Include="Images\CourtsImages\ZwgrafouCourt1.jpg" />
     <Content Include="Images\LoginImage\business-team-meeting.jpg" />
     <Content Include="Models\DbSchema.sql" />
     <Content Include="Scripts\bootstrap.bundle.js" />
