--- a/TeamProject/packages.config
+++ b/TeamProject/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="4.3.1" targetFramework="net472" />
+  <package id="BouncyCastle" version="1.8.2" targetFramework="net472" />
   <package id="Dapper" version="1.60.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="FluentMigrator" version="3.1.3" targetFramework="net472" />
@@ -11,6 +12,7 @@
   <package id="FluentMigrator.Runner.SqlServer" version="3.1.3" targetFramework="net472" />
   <package id="jQuery" version="3.3.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
+  <package id="MailKit" version="2.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
@@ -37,11 +39,13 @@
   <package id="Microsoft.Owin.Security.Cookies" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
+  <package id="MimeKit" version="2.1.3" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Moment.js" version="2.24.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="popper.js" version="1.14.3" targetFramework="net472" />
+  <package id="RestSharp" version="106.6.9" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net472" />
